test/files/neg/bug909.check
bug909.scala:6: error: type mismatch;
 found   : "Hello".type (with underlying type java.lang.String)
 required: Int
                        case Foo("Hello") =>
                                 ^
one error found
